# kronos-mt5-forex

./: .env.example  .gitignore  CLAUDE.md  README.md  logs.txt  pyproject.toml  requirements-live.txt  requirements.txt
.github/workflows/: ci.yml
backtest/: common.py  forecast_eval.py  meanrev.py  run_backtest.py  trend.py  trend_engine.py  walk_forward.py
config/: settings.py
deploy/: README.md  kronos-companion.service  kronos-trend.service
kaggle/: README_KAGGLE.md  _make_notebook.py  kronos_walkforward.ipynb  run_on_kaggle.py
kaggle/kernel/: kronos_kaggle.py
scripts/: download_crypto.py  download_data.py  download_funding.py  download_yahoo.py  make_fixture.py  run_live.sh  setup_kronos.sh
src/kronos_mt5/adapter/: config.py  data.py  execution.py  factories.py  mt5_client.py  providers.py
src/kronos_mt5/brain/: kronos_predictor.py
src/kronos_mt5/companion/: __init__.py  accounting.py  api.py  cards.py  notify.py  recorder.py  run_api.py  store.py
src/kronos_mt5/live/: run_demo.py  run_trend_binance.py
src/kronos_mt5/risk/: sizing.py
src/kronos_mt5/strategies/: kronos_strategy.py  risk_manager.py  trend_strategy.py
tests/: test_companion.py  test_smoke.py  test_strategy_extras.py  test_walk_forward.py
